# WordleSolver

./: .CMakeLists.txt.swp  CMakeLists.txt  README.md
include/: .filter.h.swp  .game.h.swp  bot.h  entropy.h  filter.h  game.h  guess.h  read.h  simulate.h
src/: .simulate.cpp.swp  .words.txt.swp  bot.cpp  driver.cc  entropy.cpp  filter.cpp  game.cpp  guess.cpp  read.cpp  simulate.cpp  words_small.txt
tests/: bot_test.cpp  entropy_test.cpp  filter_test.cpp  game_test.cpp
